[package]
name = "ppom"
version = "0.5.0"
description = "Left Leaning Red Black index in Rust-lang"
repository = "https://github.com/bnclabs/ppom"
documentation = "https://docs.rs/ppom"
authors = ["prataprc <prataprc@gmail.com>"]
keywords = ["storage", "llrb", "sorting", "data-structure"]
categories = ["algorithms", "database", "data-structure"]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "perf"
required-features = ["perf"]

[dependencies]
mkit = { path = "../mkit", version = "0.2.0" }
rand = { version = "0.7.3", features = ["small_rng"] }
arbitrary = { version = "0.4.7", features = ["derive"] }

structopt = { version = "0.3.20", default-features = false, optional = true }

[dev-dependencies]

[features]
perf = ["structopt"]
