[package]
name = "ppom"
version = "0.7.0"
description = "Left Leaning Red Black index in Rust-lang"
repository = "https://github.com/bnclabs/ppom"
documentation = "https://docs.rs/ppom"
keywords = ["storage", "llrb", "indexing", "data-structures"]
categories = ["algorithms", "database", "data-structures"]
authors = ["prataprc <prataprc@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bin]]
name = "perf"
required-features = ["perf"]

[dependencies]
rand = { version = "0.8.4", features = ["std_rng"], optional = true }
arbitrary = { version = "0.4.7", features = ["derive"], optional = true }
structopt = { version = "0.3.20", default-features = false, optional = true }

[dev-dependencies]
arbitrary = { version = "0.4.7", features = ["derive"]}
rand = { version = "0.8.4", features = ["std_rng"] }

[features]
perf = ["structopt", "arbitrary", "rand"]
